// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clean.Button should handle props 1`] = `
<DocumentFragment>
  <a
    class="link button size-s basic-blue"
    data-testid="anchor"
    href="https://site.com"
  >
    Go to site
  </a>
</DocumentFragment>
`;

exports[`Clean.Button should handle props 2`] = `
<DocumentFragment>
  <a
    class="link button size-s basic-blue"
    data-testid="anchor"
  />
</DocumentFragment>
`;

exports[`Clean.Button should render without props 1`] = `
<DocumentFragment>
  <a
    class="link button size-s basic-blue"
    data-testid="anchor"
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Clean.Group should render multiple buttons 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <a
      class="link button size-s basic-blue"
      data-testid="anchor"
      role="button"
      tabindex="0"
    >
      Foo
    </a>
    <a
      class="link button size-s basic-blue"
      data-testid="anchor"
      role="button"
      tabindex="0"
    >
      Bar
    </a>
    <a
      class="link button size-s basic-blue"
      data-testid="anchor"
      href="https://www.abc.xyz"
    >
      XYZ
    </a>
  </div>
</DocumentFragment>
`;

exports[`Clean.Group should render single button 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <a
      class="link button size-s basic-blue"
      data-testid="anchor"
      role="button"
      tabindex="0"
    >
      One button
    </a>
  </div>
</DocumentFragment>
`;

exports[`Clean.Group should render without props 1`] = `
<DocumentFragment>
  <div
    class="group"
  />
</DocumentFragment>
`;
